ui_DATA = \
	bookmarks.glade \
	export-dialog.glade \
	prefs.glade \
	popups.glade \
	module-manager.glade \
	navbar_versekey.glade \
	search-dialog.glade \
	arrow_down.png \
	arrow_down_box.png \
	arrow_up.png \
	arrow_up_box.png \
	languages \
	logo.png \
	gnome-sound-properties.png \
	sword3.png \
	sword_icon-16.png \
	epiphany-bookmarks.png \
	editor_studypad.xml \
	editor_note.xml 

uidir = $(pkgdatadir)

uixmldir = $(datadir)/gnome-2.0/ui

EXTRA_DIST = $(ui_DATA)
