ui_DATA = \
	bookmarks.glade \
	export-dialog.glade \
	prefs.glade \
	module-manager.glade \
	navbar_versekey.glade \
	search-dialog.glade \
	xi-menus.glade \
	arrow_down.png \
	arrow_down_box.png \
	arrow_up.png \
	arrow_up_box.png \
	chat_icon-16.png \
	logo.png \
	gnome-sound-properties.png \
	sword3.png \
	sword_icon-16.png \
	epiphany-bookmarks.png \
	mailing_list_icon-16.png \
	silk-edit-bookmarks.png \
	translation_icon-16.png \
	xiphos-x-16.png \
	languages \
	editor_studypad.xml \
	editor_note.xml 

uidir = $(pkgdatadir)

uixmldir = $(datadir)/gnome-2.0/ui

EXTRA_DIST = $(ui_DATA)
