ui_DATA = \
	bookmarks.glade \
	export-dialog.glade \
	markverse.glade \
	module-manager.glade \
	navbar_versekey.glade \
	prefs.glade \
	search-dialog.glade \
	xi-menus.glade \
	xi-export-bookmarks.glade \
	arrow_down.png \
	arrow_down_box.png \
	arrow_up.png \
	arrow_up_box.png \
	chat_icon-16.png \
	dlg-un-16.png \
	epiphany-bookmarks.png \
	gnome-sound-properties.png \
	logo.png \
	mailing_list_icon-16.png \
	new_tab_button.png \
	silk-edit-bookmarks.png \
	sword3.png \
	sword_icon-16.png \
	translation_icon-16.png \
	xiphos-x-16.png \
	languages \
	editor_link_dialog.xml \
	editor_studypad.xml \
	editor_note.xml 

uidir = $(pkgdatadir)

uixmldir = $(datadir)/gnome-2.0/ui

EXTRA_DIST = $(ui_DATA)
