include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = 	gnomesword
DOC_ENTITIES = 	introduction.xml \
		interface.xml \
		start.xml \
		preferences.xml \
		modules.xml \
		search.xml \
		studypad.xml \
		personal.xml \
		authors.xml \
		license.xml\
		legal.xml
DOC_INCLUDES = 	
DOC_FIGURES = 	figures/first_start.png \
		figures/interface_biblepane-options.png \
		figures/interface_biblepane.png \
		figures/interface_commentarypane.png \
		figures/interface_dictionary.png \
		figures/interface_menubar.png \
		figures/interface_menubar-view.png \
		figures/interface_parallel.png \
		figures/interface_parallel-separate.png \
		figures/interface.png \
		figures/interface_searchpane.png \
		figures/interface_shortcut.png \
		figures/interface_sidepane.png \
		figures/interface_toolbar.png \
		figures/interface_viewer.png \
		figures/module.png \
		figures/personal.png \
		figures/preferences_fonts-color.png \
		figures/preferences_fonts-misc.png \
		figures/preferences_general-misc.png \
		figures/preferences_general-tabs.png \
		figures/preferences_modules-main.png \
		figures/preferences_modules-misc.png \
		figures/preferences_modules-parallel.png \
		figures/preferences.png \
		figures/search_search.png \
		figures/studypad.png \
		figures/sword3.png \
		figures/sword_config.png \
		figures/sword_install.png \
		figures/sword_remove.png \
		figures/sword_sources.png

DOC_LINGUAS =de fr
